Name:                convergence
Version:             0.1
Synopsis:            convergence notary
Build-Type:          Simple

Executable:          convergence
Extensions:          ScopedTypeVariables, OverloadedStrings
GHC-Options:         -threaded
Hs-Source-Dirs:      src
Main-Is:             Main.hs
Build-Depends:       base >= 4, haskell98, HsOpenSSL, base64-string,
                     split, MissingH, transformers, sqlite, time,
                     utf8-string,network, bytestring, snap-server,
                     snap-core
